fixes font spacing issue on list results

--- a/app/assets/stylesheets/umbra.css.scss
+++ b/app/assets/stylesheets/umbra.css.scss
@@ -177,6 +177,9 @@ ol.subjects {
     display: inline;
     margin-bottom: 5px;
   }
+  [class^="icon-"]:before, [class*=" icon-"]:before {
+    display: inline;
+  }
 }
 
 #atstbx,
